Minor update to native makefile to sync with upstream

--- a/wakaama-test/Makefile.native
+++ b/wakaama-test/Makefile.native
@@ -52,6 +52,9 @@ USEPKG += wakaama
 # Uncomment to enable Wakaama debug log
 #CFLAGS += -DLWM2M_WITH_LOGS
 
+# Uncomment to indicate that the server is a LwM2M bootstrap server
+# CFLAGS += -DLWM2M_BOOTSTRAP=1
+
 # NOTE: Use wakaama in client mode with bootstrapping enabled
 CFLAGS += -DLWM2M_CLIENT_MODE
 
