--- a/wakaama-test/Makefile.inet
+++ b/wakaama-test/Makefile.inet
@@ -5,7 +5,7 @@ APPLICATION = wakaama
 BOARD ?= esp8266-esp-12x
 
 # This has to be the absolute path to the RIOT base directory:
-RIOTBASE ?= $(CURDIR)/../../../riot/test-repo
+RIOTBASE ?= $(CURDIR)/../../../riot/repo
 
 # Include packages that pull up and auto-init the link layer.
 # NOTE: 6LoWPAN will be included if IEEE802.15.4 devices are present
