--- a/wakaama-test/Makefile.native
+++ b/wakaama-test/Makefile.native
@@ -7,19 +7,6 @@ BOARD ?= native
 # This has to be the absolute path to the RIOT base directory:
 RIOTBASE ?= $(CURDIR)/../../../riot/repo
 
-# TinyDTLS only has support for 32-bit architectures ATM
-BOARD_BLACKLIST := arduino-duemilanove arduino-mega2560 arduino-uno chronos \
-                   msb-430 msb-430h telosb waspmote-pro wsn430-v1_3b wsn430-v1_4 \
-                   z1
-
-BOARD_INSUFFICIENT_MEMORY := airfy-beacon b-l072z-lrwan1 bluepill calliope-mini \
-                             cc2650-launchpad cc2650stk maple-mini \
-                             microbit nrf51dongle nrf6310 nucleo32-f031 \
-                             nucleo32-f042 nucleo32-f303 nucleo32-l031 nucleo-f030 \
-                             nucleo-f070 nucleo-f072 nucleo-f103 nucleo-f302 nucleo-f334 \
-                             nucleo-l053 nucleo-l073 opencm904 \
-                             spark-core stm32f0discovery yunjia-nrf51822
-
 
 # Include packages that pull up and auto-init the link layer.
 # NOTE: 6LoWPAN will be included if IEEE802.15.4 devices are present
@@ -55,7 +42,7 @@ USEPKG += wakaama
 # Uncomment to indicate that the server is a LwM2M bootstrap server
 # CFLAGS += -DLWM2M_BOOTSTRAP=1
 
-# NOTE: Use wakaama in client mode with bootstrapping enabled
+# NOTE: Use wakaama in client mode
 CFLAGS += -DLWM2M_CLIENT_MODE
 
 include $(RIOTBASE)/Makefile.include
