--- a/wakaama-test/Makefile.ula
+++ b/wakaama-test/Makefile.ula
@@ -7,9 +7,6 @@ BOARD ?= samr21-xpro
 # This has to be the absolute path to the RIOT base directory:
 RIOTBASE ?= $(CURDIR)/../../../riot/repo
 
-# The following boards do not have an available UART
-BOARD_BLACKLIST += pic32-wifire pic32-clicker ruuvitag thingy52
-
 # use ethos (ethernet over serial) for network communication and stdio over
 # UART, but not on native, as native has a tap interface towards the host.
 ifeq (,$(filter native,$(BOARD)))
@@ -66,7 +63,7 @@ USEPKG += wakaama
 # Uncomment to enable Wakaama debug log
 #CFLAGS += -DLWM2M_WITH_LOGS
 
-# NOTE: Use wakaama in client mode with bootstrapping enabled
+# NOTE: Use wakaama in client mode
 CFLAGS += -DLWM2M_CLIENT_MODE
 
 # We override the `make term` command to use ethos
